A11y: Fix default color contrast issues

--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -76,7 +76,9 @@ ul, ol {
 ----------------------------------------------- */
 
 a {
-  color: $blue;
+
+  color: $link;
+
   &:hover, &:active, &:focus {
   }
 }
