--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -10,14 +10,17 @@ $black:                #000;
 $white:                #fff;
 $grey:                 #ddd;
 $grey-light:           #f2f2f2;
-$blue:                 #42a0d9;
 
 // context colors
 $primary:              #c82986;
 
+$link:                 #3279A6;
+$success:              #98C93C;
+$error:                #D95757;
+
 // text colors
 $base-font-color:      #333;
-$grey-font-color:      #888;
+$grey-font-color:      #767676;
 
 // special colors
 $menu-dropdown-bg:     $base-font-color;
