--- a/assets/styles/elements/_menu-upper.scss
+++ b/assets/styles/elements/_menu-upper.scss
@@ -84,11 +84,9 @@
       color: $grey-font-color;
       text-decoration: none;
       flex-grow: 1;
-      font-weight: $bold;
-      text-transform: uppercase;
-      font-size: .8125rem;
+      font-size: .875rem;
       @include breakpoint($l) {
-        font-size: .875rem;
+        font-size: .9375rem;
       }
       &:hover, &:focus, &:active {
         color: $base-font-color;
